--- a/package.json
+++ b/package.json
@@ -15,9 +15,17 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
-    "next": "13.1.2",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "next": "^13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
-  }
+    "typescript": "4.9.4",
+    "ws": "^8.12.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.15",
+    "@types/ws": "^8.5.4"
+  },
+  "type": "module"
 }
