--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "@prisma/client": "^4.9.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "next": "^13.1.2",
+    "prisma": "^4.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
     "typescript": "4.9.4",
     "ws": "^8.12.0"
   },
