--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "typescript": "4.9.4",
+    "use-sound": "^4.0.1",
     "ws": "^8.12.0"
   },
   "devDependencies": {
