--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "8.31.0",
@@ -23,6 +24,7 @@
     "next": "^13.1.2",
     "prisma": "^4.9.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
